--- a/css/style.css
+++ b/css/style.css
@@ -817,6 +817,11 @@ body {
   gap: 60px;
   border-radius: 30px 0 0px 30px;
 }
+.interpreparation-wrapper .interviewpreparation-enroll  .btn-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .interpreparation-wrapper .interviewpreparation-enroll .interviewBtn {
   color: var(--white-text-color);
